# ipatcher-rs

./: Cargo.toml  Makefile  README.md  build.rs
patchfinder64/: libpatchfinder.dylib  patchfinder64.c
src/: main.rs  patchfinder.rs
