[package]
name = "ipatcher-rs"
version = "0.1.0"
authors = ["justtryingthingsout <31097061+justtryingthingsout@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.0"
memchr = "2.4.1"